objects/Cible__c.object
<CustomObject>
    <fields>
        <fullName>Cat_gorie_cible__c</fullName>
        <label>Catégorie cible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cibles sectorielles</fullName>
                </value>
                <value>
                    <fullName>Sociétés proches de l&apos;école</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cibles__c</fullName>
        <label>Cibles</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cat_gorie_cible__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>120 plus grosses sociétés en Bourse</fullName>
                </value>
                <value>
                    <fullName>BENEFPART</fullName>
                </value>
                <value>
                    <fullName>Prescripteur CIO GE</fullName>
                </value>
                <value>
                    <fullName>Prescripteur IDEA</fullName>
                </value>
                <value>
                    <fullName>Sociétés clientes EML</fullName>
                </value>
                <value>
                    <fullName>Sociétés crées par un diplômé</fullName>
                </value>
                <value>
                    <fullName>Sociétés dans le secteur du Luxe</fullName>
                </value>
                <value>
                    <fullName>Sociétés dans le secteur du Sport</fullName>
                </value>
                <value>
                    <fullName>TAXEGEST</fullName>
                </value>
                <value>
                    <fullName>TAXEPRES</fullName>
                </value>
                <value>
                    <fullName>TAXEPRI</fullName>
                </value>
                <value>
                    <fullName>TAXEPROC</fullName>
                </value>
                <value>
                    <fullName>TAXEVIP</fullName>
                </value>
                <value>
                    <fullName>Fournisseurs de l&apos;école</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cibles</relationshipLabel>
        <relationshipName>Cilbles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>x18caracteres__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>x18caracteres</label>
        <type>Text</type>
    </fields>
    <label>Cible</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Cibles__c</columns>
        <columns>Cat_gorie_cible__c</columns>
        <columns>Compte__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Numéro de la Cible</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cibles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>